# vs-ffdnet

./: README.md  setup.cfg
vsffdnet/: __init__.py  network_ffdnet.py
