[metadata]
name = vsffdnet
version = 1.0.0
author = HolyWu
description = FFDNet function for VapourSynth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HolyWu/vs-ffdnet
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = vsffdnet
python_requires = >=3.6

[options.package_data]
vsffdnet = *.pth
