[metadata]
name = vsffdnet
version = 1.1.0
author = HolyWu
description = FFDNet function for VapourSynth
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HolyWu/vs-ffdnet
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Multimedia :: Video

[options]
zip_safe = False
packages = vsffdnet
python_requires = >=3.6
install_requires =
    numpy
    torch

[options.package_data]
vsffdnet = *.pth
